<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    START enteties  -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_entities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/boissons"
        android:textAlignment="center"
        android:textSize="14pt"
        app:layout_constraintEnd_toStartOf="@id/line_enteties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_colombia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colombia"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btn_sumatra"
        app:layout_constraintEnd_toStartOf="@id/line_enteties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_entities" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sumatra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sumatra"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btn_espresso"
        app:layout_constraintEnd_toStartOf="@id/line_enteties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_colombia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_espresso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espresso"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btn_deca"
        app:layout_constraintEnd_toStartOf="@id/line_enteties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sumatra" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_deca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deca"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/line_decorators"
        app:layout_constraintEnd_toStartOf="@id/line_enteties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_espresso" />

    <!--    END enteties-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_enteties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <!--    START decoratoes-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_decorators"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/decorateurs"
        android:textAlignment="center"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_enteties"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_lait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lait"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btn_chocolat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_enteties"
        app:layout_constraintTop_toBottomOf="@id/label_decorators" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chocolat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolat"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btn_caramel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_enteties"
        app:layout_constraintTop_toBottomOf="@id/btn_lait" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_caramel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caramel"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btn_chantilly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_enteties"
        app:layout_constraintTop_toBottomOf="@id/btn_chocolat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chantilly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chantilly"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/line_decorators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_enteties"
        app:layout_constraintTop_toBottomOf="@id/btn_caramel" />

    <!--    END decorators-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_decorators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <ScrollView
        android:id="@+id/scroll_txt_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/txt_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_decorators">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/vide"
            android:scrollbars="vertical"
            android:textSize="10pt"
            android:typeface="sans" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MAD0"
        android:textAlignment="center"
        android:textSize="14pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_txt_result" />


</androidx.constraintlayout.widget.ConstraintLayout>